--- a/Frontend/src/pages/forum/postdetail.scss
+++ b/Frontend/src/pages/forum/postdetail.scss
@@ -9,7 +9,7 @@
 
   /* Adapt for smaller screens */
   @media (max-width: 768px) {
-    padding: 15px;
+    // padding: 15px;
   }
 
   .post-header {
