--- a/Frontend/src/pages/forum/style.scss
+++ b/Frontend/src/pages/forum/style.scss
@@ -195,7 +195,8 @@ body {
 .post {
   background-color: #1c1c1e; /* Dark background for posts */
   margin: 15px 0;
-  padding: 15px;
+  padding: 5px;
+  // padding: 15px;
   border-radius: 8px; /* Slightly more rounded edges */
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
