--- a/Frontend/src/pages/credentials/RegisterComponent.scss
+++ b/Frontend/src/pages/credentials/RegisterComponent.scss
@@ -390,3 +390,19 @@ margin-left: 44px;
     transform: rotate(360deg);
   }
 }
+
+.forgot-password-container {
+  margin-top: 6px;
+  text-align: right;
+}
+
+.forgot-password-link {
+  color: #0a66c2;
+  font-size: 14px;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.forgot-password-link:hover {
+  text-decoration: none;
+}
